# Tg-assistant-for-cards-dealer

./: README.md  app.py  pyproject.toml
bot/: app.py  bot.ini  config.py  states.py  template_engine.py
bot/handlers/: __init__.py  commands.py  common.py  group.py  test_states.py
bot/keyboards/: inline.py  reply.py
bot/routers/: __init__.py  commands.py  group.py  room.py
data/: groups.json  rooms.json
service/: database.py  group.py  room.py
templates/: create_group.html  create_room.html  group_created.html  room_created.html  start.html
